# Weather

./: .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md
Weather/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Weather  cmake_install.cmake  token.txt
Weather/src/: .gitlab-ci.yml
Weather/src/headers/: application.hpp  client.hpp  network.hpp
Weather/src/sources/: application.cpp  client.cpp  main.cpp  network.cpp
intro/: .clang-format  .clang-tidy  .gitlab-ci.yml
intro/test/: coder_gTest.cpp
project/: coder.cpp  coder.h
